force-app/main/default/objects/TermsandConditions__c/TermsandConditions__c.object-meta.xml
<CustomObject>
    <description>[Korea DCE] As-Is reuse 
Terms and Conditions, that are related to the different markets. Actual Terms and Conditions need to be accepted during Self Registration or at login.</description>
    <label>Terms and Conditions</label>
    <nameField>
        <displayFormat>TaC-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Terms and Conditions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>