force-app/main/default/objects/TermsandConditions__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag means it is already approved</description>
    <label>(X)Approved (not editable)</label>
    <type>Checkbox</type>
</CustomField>