force-app/main/default/objects/TermsandConditions__c/fields/CAA_isRequired__c.field-meta.xml
<CustomField>
    <fullName>CAA_isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>T&amp;C 필수/선택 여부</description>
    <inlineHelpText>필수 약관 여부</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>