force-app/main/default/objects/TermsandConditions__c/fields/CCR_ChannelOptin__c.field-meta.xml
<CustomField>
    <fullName>CCR_ChannelOptin__c</fullName>
    <description>Channel Opt-in (for both traditional and social media channels), SMS, email, whatsapp, etc</description>
    <label>(X)Channel Opt-in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>PHONE</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>TWITTER</fullName>
            </value>
            <value>
                <fullName>INSTAGRAM</fullName>
            </value>
            <value>
                <fullName>FACEBOOK</fullName>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>INSTANTMESSAGE</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>