force-app/main/default/objects/TermsandConditions__c/fields/CCR_Language__c.field-meta.xml
<CustomField>
    <fullName>CCR_Language__c</fullName>
    <description>The Language in which the Terms and Conditions are written. Need to be an Language that the market supports</description>
    <label>(X)Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_Languages</valueSetName>
    </valueSet>
</CustomField>