force-app/main/default/objects/TermsandConditions__c/fields/CCR_TACCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_TACCountry__c</fullName>
    <description>Country code of document used for AV (ISO_3166-1_alpha-2)</description>
    <label>(X)TAC Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_CountryISOs</valueSetName>
    </valueSet>
</CustomField>