force-app/main/default/objects/TermsandConditions__c/fields/CCR_TACRefCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_TACRefCode__c</fullName>
    <description>Reference code of Terms and Conditions</description>
    <label>(X)TAC Ref Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>