force-app/main/default/objects/TermsandConditions__c/fields/CCR_TCIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CCR_TCIdentifier__c</fullName>
    <description>External identifier of T&amp;C. Concatenation of TCCountry, TCRefCode, TCVersion.</description>
    <externalId>true</externalId>
    <label>(X)TC Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>