force-app/main/default/objects/TermsandConditions__c/fields/CCR_Type__c.field-meta.xml
<CustomField>
    <fullName>CCR_Type__c</fullName>
    <description>[KDCE] 필드 재정의 
같이 표시될 T&amp;C의 타입 : Sign up 의 경우, 고객이 ECcomerce Sign up시 함꼐 표시될 T&amp;C

To differentiate the Terms and Conditions that are coming from Fast Track from the ones that are coming from Spice.</description>
    <label>(X)Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Sign up</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Trade-in</fullName>
            </value>
            <value>
                <fullName>MGM</fullName>
            </value>
            <value>
                <fullName>Getinfo.kr</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
                <isActive>false</isActive>
                <label>DM</label>
            </value>
            <value>
                <fullName>EMAIL</fullName>
                <isActive>false</isActive>
                <label>EMAIL</label>
            </value>
            <value>
                <fullName>F2F</fullName>
                <isActive>false</isActive>
                <label>F2F</label>
            </value>
            <value>
                <fullName>FACEBOOK</fullName>
                <isActive>false</isActive>
                <label>FACEBOOK</label>
            </value>
            <value>
                <fullName>INSTAGRAM</fullName>
                <isActive>false</isActive>
                <label>INSTAGRAM</label>
            </value>
            <value>
                <fullName>INSTANTMESSAGE</fullName>
                <isActive>false</isActive>
                <label>INSTANTMESSAGE</label>
            </value>
            <value>
                <fullName>LINE</fullName>
                <isActive>false</isActive>
                <label>LINE</label>
            </value>
            <value>
                <fullName>MMS</fullName>
                <isActive>false</isActive>
                <label>MMS</label>
            </value>
            <value>
                <fullName>MR</fullName>
                <isActive>false</isActive>
                <label>MR</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <isActive>false</isActive>
                <label>PHONE</label>
            </value>
            <value>
                <fullName>SMS</fullName>
                <isActive>false</isActive>
                <label>SMS</label>
            </value>
            <value>
                <fullName>TWITTER</fullName>
                <isActive>false</isActive>
                <label>TWITTER</label>
            </value>
            <value>
                <fullName>WEB</fullName>
                <isActive>false</isActive>
                <label>WEB</label>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
                <isActive>false</isActive>
                <label>WHATSAPP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>