force-app/main/default/objects/TermsandConditions__c/fields/DTE_StartDate__c.field-meta.xml
<CustomField>
    <fullName>DTE_StartDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Startdate of Terms and Conditions</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>