force-app/main/default/objects/TermsandConditions__c/fields/DTE_TermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>DTE_TermsAndConditions__c</fullName>
    <description>Description of Terms and Conditions</description>
    <label>Terms and Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>