force-app/main/default/objects/TermsandConditions__c/fields/DTE_Version__c.field-meta.xml
<CustomField>
    <fullName>DTE_Version__c</fullName>
    <description>Version of Terms and Conditions</description>
    <label>(X)Version</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>