force-app/main/default/objects/TermsandConditions__c/fields/fm_TnCId__c.field-meta.xml
<CustomField>
    <fullName>fm_TnCId__c</fullName>
    <description>[KDCE] T&amp;C Id Key</description>
    <formula>TEXT(KDCE_SubGroup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID</label>
    <type>Text</type>
</CustomField>