force-app/main/default/objects/TermsandConditions__c/fields/fm_TnCTitle__c.field-meta.xml
<CustomField>
    <fullName>fm_TnCTitle__c</fullName>
    <description>T&amp;C 키정보 정의</description>
    <formula>&apos;[&apos;+TEXT( KDCE_SubGroup__c ) + TEXT( KDCE_VersionNumber__c ) + &apos;]&apos;+ Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;C Title</label>
    <type>Text</type>
</CustomField>