force-app/main/default/objects/TermsandConditions__c/fields/KDCE_Active__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active Status</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>