force-app/main/default/objects/TermsandConditions__c/fields/KDCE_CCAMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_CCAMarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Call Center Agent Marketing Opt-in</description>
    <label>CCA Marketing Opt-in</label>
    <type>Checkbox</type>
</CustomField>