force-app/main/default/objects/TermsandConditions__c/fields/KDCE_Channel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Channel__c</fullName>
    <description>[KDCE] T&amp;C 채널</description>
    <inlineHelpText>약관이 함께 노출되는 그룹</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KDCE_Channel</valueSetName>
    </valueSet>
</CustomField>