force-app/main/default/objects/TermsandConditions__c/fields/KDCE_ChannelOrder__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ChannelOrder__c</fullName>
    <description>[KDCE] Channel Number</description>
    <label>No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>