force-app/main/default/objects/TermsandConditions__c/fields/KDCE_hasResponse__c.field-meta.xml
<CustomField>
    <fullName>KDCE_hasResponse__c</fullName>
    <description>응답값 여부</description>
    <label>(X)hasResponse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>