force-app/main/default/objects/TermsandConditions__c/fields/KDCE_InfomationOptin__c.field-meta.xml
<CustomField>
    <fullName>KDCE_InfomationOptin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>정보성 수신 여부</description>
    <label>(X)Infomation Opt-in</label>
    <type>Checkbox</type>
</CustomField>