force-app/main/default/objects/TermsandConditions__c/fields/KDCE_MarketingOptin__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MarketingOptin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Marketing Opt in 제어 T&amp;C 여부
고객의 Marketing Opt-in 필드와 연동됩니다.</description>
    <inlineHelpText>고객이 해당 T&amp;C 동의시, 고객의 Marketing Opt-in 필드와 연동되어 체크됩니다.</inlineHelpText>
    <label>(X)Marketing Opt-in</label>
    <type>Checkbox</type>
</CustomField>