force-app/main/default/objects/TermsandConditions__c/fields/KDCE_SubGroup__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SubGroup__c</fullName>
    <description>[KDCE] Version 관리하기 위한 값</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KDCE_Channel__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PMTC</fullName>
                <label>[PMTC]이용약관  (필수)</label>
            </value>
            <value>
                <fullName>PMPM</fullName>
                <label>[PMPM]개인정보 수집 및 이용 (필수)</label>
            </value>
            <value>
                <fullName>PMPO</fullName>
                <label>[PMPO]개인정보 수집 및 이용 (선택)</label>
            </value>
            <value>
                <fullName>PMPP</fullName>
                <label>[PMPP]개인정보 처리업무 위탁 동의 (2020년 9월 16일 18시25분 가입자까지 유효)</label>
            </value>
            <value>
                <fullName>PMPT</fullName>
                <label>[PMPT]개인정보 제3자 제공 (선택)</label>
            </value>
            <value>
                <fullName>PMTP</fullName>
                <label>[PMTP]개인정보 국외이전 (선택)</label>
            </value>
            <value>
                <fullName>PMCPE</fullName>
                <label>[PMCPE]휴면회원 전환기간 특례</label>
            </value>
            <value>
                <fullName>globaloptin</fullName>
                <label>[Common]광고성 정보 수신 (통합)</label>
            </value>
            <value>
                <fullName>PMPMG</fullName>
                <label>[Getinfo]개인정보 수집 및 이용 (필수)</label>
            </value>
            <value>
                <fullName>PMPOG</fullName>
                <label>[Getinfo]개인정보 수집 및 이용</label>
            </value>
            <value>
                <fullName>PMPPG</fullName>
                <label>[Getinfo]개인정보 처리 업무 위탁에 대한 동의</label>
            </value>
            <value>
                <fullName>PMPTG</fullName>
                <label>[Getinfo]개인정보 제3자 제공 (선택)</label>
            </value>
            <value>
                <fullName>PMDP</fullName>
                <label>[PMDP]개인정보 수집 및 이용 동의 (필수)</label>
            </value>
            <value>
                <fullName>PMNL</fullName>
                <label>[PMNL]개인정보 수집 및 이용 동의 (선택)</label>
            </value>
            <value>
                <fullName>PMDT</fullName>
                <label>[PMDT]개인정보 국외이전 동의</label>
            </value>
            <value>
                <fullName>PMTR</fullName>
                <label>[PMTR]Rental 이용약관 (필수)</label>
            </value>
            <value>
                <fullName>PMTI</fullName>
                <label>[PMTI]보상판매 이용 약관 (필수)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>