force-app/main/default/objects/TermsandConditions__c/fields/KDCE_TnCVersionSet__c.field-meta.xml
<CustomField>
    <fullName>KDCE_TnCVersionSet__c</fullName>
    <description>[KDCE]Terms and Conditions Versions</description>
    <label>(X)Terms and Conditions Version Sets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
            <value>
                <fullName>3.0</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>