force-app/main/default/objects/TermsandConditions__c/fields/KDCE_VersionName__c.field-meta.xml
<CustomField>
    <fullName>KDCE_VersionName__c</fullName>
    <description>[KDCE] Version Name 
고객에게 표시할 버젼이름</description>
    <label>Version Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>