force-app/main/default/objects/TermsandConditions__c/fields/KDCE_VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>KDCE_VersionNumber__c</fullName>
    <description>[KDCE]Version Number</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>