force-app/main/default/objects/TermsandConditions__c/fields/X_KDCE_Group__c.field-meta.xml
<CustomField>
    <fullName>X_KDCE_Group__c</fullName>
    <description>[KDCE]  T&amp;C 그룹 : 함께 표시될 T&amp;C 그룹</description>
    <label>(X)Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Sign up</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Trade-in</fullName>
            </value>
            <value>
                <fullName>MGM</fullName>
            </value>
            <value>
                <fullName>Getinfo.kr</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>