force-app/main/default/objects/TermsandConditions__c/validationRules/Approved_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Not_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>Approved__c = TRUE</errorConditionFormula>
    <errorMessage>T&amp;C are approved and cannot be edited. Please create a new version.</errorMessage>
</ValidationRule>