force-app/main/default/objects/TermsandConditions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>KDCE_Channel__c</columns>
    <columns>NAME</columns>
    <columns>fm_TnCTitle__c</columns>
    <columns>fm_TnCId__c</columns>
    <columns>KDCE_VersionNumber__c</columns>
    <columns>CAA_isRequired__c</columns>
    <columns>KDCE_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>